# SIMDSetOperations

./: CMakeLists.txt  README.md  benchmark.hpp  benchmark_difference.cpp  benchmark_intersection.cpp  benchmark_union.cpp  constants.h  genLists.cpp  merge.cpp  projectconfig.h.in  set_difference.cpp  set_intersection.cpp  set_union.cpp  shuffle_dictionary.hpp  tests.cpp
cmake/: iaca.cmake
difference/: avx2.hpp  avx512.hpp  naive.hpp  sse.hpp  stl.hpp
intersection/: avx.hpp  avx2.hpp  avx512.hpp  branchless.hpp  galloping.hpp  galloping_avx2.hpp  galloping_sse.hpp  naive.hpp  sse.hpp  stl.hpp
merge/: avx2.hpp  avx512.hpp  naive.hpp  sse.hpp  stl.hpp
union/: avx512.hpp  branchless.hpp  naive.hpp  sse.hpp  stl.hpp
